@@ -1,5 +1,16 @@
 2005-01-03  Hollis Blanchard  <hollis@penguinppc.org>
 
+	* boot/powerpc/ieee1275/ieee1275.c (grub_ieee1275_milliseconds):
+	New function.
+	* include/grub/powerpc/ieee1275/ieee1275.h
+	(grub_ieee1275_milliseconds): New prototype.
+	* include/grub/powerpc/ieee1275/time.h (GRUB_TICKS_PER_SECOND):
+	Change to 1000.
+	* kern/powerpc/ieee1275/init.c (grub_get_rtc): Call
+	grub_ieee1275_milliseconds.
+
+2005-01-03  Hollis Blanchard  <hollis@penguinppc.org>
+
 	* boot/powerpc/ieee1275/cmain.c (grub_ieee1275_realmode): New
 	variable.
 	(find_options): New function.
